--- a/styles.css
+++ b/styles.css
@@ -131,3 +131,13 @@ footer li, footer .gefoerdert {
 footer ul {
     padding: 0;
 }
+.social-icon {
+    width: 40px;
+    height: 40px;
+}
+.social-icon:hover {
+    transform: scale(1.2);
+}
+a:has(img.social-icon) {
+    text-decoration: none;
+}
