--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,22 @@
     url('fonts/roboto-v30-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
 
+@font-face {
+    font-family: 'TCCEB';
+    font-style: normal;
+    font-weight: 400;
+    src: url('fonts/TCCEB.eot'); /* IE9 Compat Modes */
+    src: local(''),
+    url('fonts/TCCEB.eot') format('embedded-opentype'), /* IE6-IE8 */
+    url('fonts/TCCEB.woff2') format('woff2'), /* Super Modern Browsers */
+    url('fonts/TCCEB.woff') format('woff'), /* Modern Browsers */
+    url('fonts/TCCEB.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('fonts/TCCEB.svg') format('svg'); /* Legacy iOS */
+}
 
 body {
-    font: 400 24px Roboto, sans-serif;
-    line-height: 1.8;
+    font: 400 24px TCCEB, sans-serif;
+    line-height: 1.2;
     color: #818181;
 }
 a {
@@ -26,7 +38,8 @@ a:hover {
     color: #e39706;
 }
 .jumbotron, #services, #neuigkeiten {
-    font-family: Roboto, sans-serif;
+    font-family: TCCEB, sans-serif;
+    line-height: 1.2;
     border-radius: 0;
     margin-bottom: 0;
 }
@@ -51,7 +64,8 @@ a:hover {
 .button {
     background-color: #e39706;
     color: #fff;
-    font-family: Roboto, sans-serif;
+    font-family: TCCEB, sans-serif;
+    font-size: 32px;
     border-radius: 20px;
     height: 80px;
     line-height: 80px;
@@ -89,7 +103,7 @@ img.sponsor {
     line-height: 1.42857143 !important;
     letter-spacing: 4px;
     border-radius: 0;
-    font-family: Roboto, sans-serif;
+    font-family: TCCEB, sans-serif;
 }
 .navbar li a, .navbar {
     color: #fff !important;
