Hintergrund-blau 50% Transparent

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ a:hover {
     color: #e39706;
 }
 .jumbotron, #sponsoren {
-    background-color: #93b4c2;
+    background-color: #93b4c277;
     font-family: TCCEB, sans-serif;
     line-height: 1.2;
     border-radius: 0;
